--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 ressources.txt
+panthera.zip
+cantarell.zip
+beyno.zip
+wakanda-forever.zip
+._.DS_Store
+OFL.txt
+readme-5b7e.txt
+license-2027.txt
+info.txt
+dafonttop.com.url
